# react-native-quick-sqlite

./: .gitignore  .tool-versions  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  bump-version.sh  package.json  react-native-quick-sqlite.podspec  react-native-sequel.podspec  tsconfig.build.json  tsconfig.json
android/: CMakeLists.txt  QuickSQLiteBridge.cpp  QuickSQLiteBridge.h  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativequicksqlite/: QuickSQLiteBridge.java  SequelModule.java  SequelPackage.java
android/src/main/java/com/reactnativesequel/: NativeProxy.java  QuickSQLiteBridge.java  SequelModule.java  SequelModule.kt  SequelPackage.java  SequelPackage.kt
android/src/main/libs/: sqlite_android.aar
android/src/paper/java/com/reactnativequicksqlite/: NativeQuickSQLiteModuleSpec.java
cpp/: CustomAggregate.cpp  CustomAggregate.h  CustomFunction.cpp  CustomFunction.h  JSIHelper.cpp  JSIHelper.h  SequelResult.h  ThreadPool.cpp  ThreadPool.h  bindings.cpp  installer.cpp  installer.h  logs.h  react-native-quick-sqlite.cpp  react-native-quick-sqlite.h  react-native-sequel.cpp  react-native-sequel.h  sequel.cpp  sequel.h  sqlbatchexecutor.cpp  sqlbatchexecutor.h  sqlfileloader.cpp  sqliteBridge.cpp  sqliteBridge.h
example/: .tool-versions  app.json  babel.config.js  index.js  package.json  tsconfig.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: _BUCK  build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/debug/java/com/example/reactnativesequel/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/quicksqliteexample/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativesequel/: MainActivity.java  MainApplication.java  ReactNativeFlipper.java
example/android/app/src/main/java/com/quicksqliteexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/quicksqliteexample/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/quicksqliteexample/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/quicksqliteexample/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/jni/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml  styles.xml
example/android/app/src/release/java/com/quicksqliteexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/QuickSQLiteExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/QuickSQLiteExample.xcodeproj/: project.pbxproj
example/ios/QuickSQLiteExample.xcodeproj/xcshareddata/xcschemes/: QuickSQLiteExample.xcscheme
example/ios/QuickSQLiteExample.xcworkspace/: contents.xcworkspacedata
example/ios/QuickSQLiteExampleTests/: QuickSQLiteExampleTests.m
example/ios/SequelExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/SequelExample.xcodeproj/: project.pbxproj
example/ios/SequelExample.xcodeproj/xcshareddata/xcschemes/: SequelExample.xcscheme
example/ios/SequelExample.xcworkspace/: contents.xcworkspacedata
example/patches/: typeorm+0.2.31.patch  typeorm+0.2.36.patch  typeorm+0.3.6.patch
example/src/: App.tsx  Database.ts
example/src/model/: Book.js  Book.ts  User.js  User.ts
example/src/tests/: MochaRNAdapter.ts  MochaSetup.ts  base.spec.ts  database.aggregate.spec.ts  index.ts  rawQueries.spec.js  rawQueries.spec.ts  typeorm.spec.ts
ios/: QuickSQLite.h  QuickSQLite.mm  Sequel.h  Sequel.mm
ios/Sequel.xcodeproj/: project.pbxproj
src/: NativeQuickSQLiteModule.ts  index.ts  index.tsx
